--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -149,6 +149,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Utils\InputMgr.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Utils\InputMgr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
