--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -150,10 +150,14 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Utils\AnimationClip.cpp" />
+    <ClCompile Include="Utils\AnimationController.cpp" />
     <ClCompile Include="Utils\InputMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Utils\AnimationClip.h" />
+    <ClInclude Include="Utils\AnimationController.h" />
     <ClInclude Include="Utils\InputMgr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
