modify: palyer moving

--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Utils\AnimationController.cpp" />
     <ClCompile Include="Utils\InputMgr.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bat.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Utils\AnimationController.h" />
     <ClInclude Include="Utils\InputMgr.h" />
     <ClInclude Include="Utils\Utils.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
