--- a/celesteProject/Celeste/sfml-template.vcxproj.filters
+++ b/celesteProject/Celeste/sfml-template.vcxproj.filters
@@ -30,6 +30,7 @@
       <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="Bat.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils\InputMgr.h">
@@ -48,5 +49,6 @@
       <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="Bat.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
 </Project>
