--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="SceneMgr\SceneMgr.cpp" />
+    <ClCompile Include="Scene\Credits.cpp" />
     <ClCompile Include="Scene\GamePlay.cpp" />
     <ClCompile Include="Scene\MainMenu.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="Framework\Framework.h" />
     <ClInclude Include="Player\Player.h" />
     <ClInclude Include="SceneMgr\SceneMgr.h" />
+    <ClInclude Include="Scene\Credits.h" />
     <ClInclude Include="Scene\GamePlay.h" />
     <ClInclude Include="Scene\MainMenu.h" />
     <ClInclude Include="Scene\Scene.h" />
