--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -148,23 +148,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Bat.cpp" />
-    <ClCompile Include="Bat2.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Map\Map.cpp" />
+    <ClCompile Include="Map\TileMap.cpp" />
     <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="Utils\AnimationClip.cpp" />
     <ClCompile Include="Utils\AnimationController.cpp" />
     <ClCompile Include="Utils\InputMgr.cpp" />
+    <ClCompile Include="Utils\TextureHolder.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Bat.h" />
-    <ClInclude Include="Bat2.h" />
+    <ClInclude Include="Map\Map.h" />
+    <ClInclude Include="Map\TileMap.h" />
     <ClInclude Include="Player\Player.h" />
     <ClInclude Include="Utils\AnimationClip.h" />
     <ClInclude Include="Utils\AnimationController.h" />
     <ClInclude Include="Utils\InputMgr.h" />
+    <ClInclude Include="Utils\repidcw.h" />
+    <ClInclude Include="Utils\TextureHolder.h" />
     <ClInclude Include="Utils\Utils.h" />
     <ClInclude Include="Wall.h" />
   </ItemGroup>
