--- a/celesteProject/Celeste/sfml-template.vcxproj
+++ b/celesteProject/Celeste/sfml-template.vcxproj
@@ -152,8 +152,9 @@
     <ClCompile Include="Framework\Framework.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="SceneMgr\MapSpriteMgr.cpp" />
     <ClCompile Include="SceneMgr\SceneMgr.cpp" />
-    <ClCompile Include="Scene\Credits.cpp" />
+    <ClCompile Include="Scene\ConfirmSelectedMapScene.cpp" />
     <ClCompile Include="Scene\GamePlay.cpp" />
     <ClCompile Include="Scene\MainMenu.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="Scene\TItle.cpp" />
     <ClCompile Include="Utils\AnimationClip.cpp" />
     <ClCompile Include="Utils\AnimationController.cpp" />
+    <ClCompile Include="Utils\GameInfoMgr.cpp" />
     <ClCompile Include="Utils\InputMgr.cpp" />
     <ClCompile Include="Utils\TextureHolder.cpp" />
     <ClCompile Include="Utils\UiMgr.cpp" />
@@ -172,8 +174,9 @@
     <ClInclude Include="Bat.h" />
     <ClInclude Include="Framework\Framework.h" />
     <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="SceneMgr\MapSpriteMgr.h" />
     <ClInclude Include="SceneMgr\SceneMgr.h" />
-    <ClInclude Include="Scene\Credits.h" />
+    <ClInclude Include="Scene\ConfirmSelectedMapScene.h" />
     <ClInclude Include="Scene\GamePlay.h" />
     <ClInclude Include="Scene\MainMenu.h" />
     <ClInclude Include="Scene\Scene.h" />
@@ -182,7 +185,9 @@
     <ClInclude Include="Scene\TItle.h" />
     <ClInclude Include="Utils\AnimationClip.h" />
     <ClInclude Include="Utils\AnimationController.h" />
+    <ClInclude Include="Utils\GameInfoMgr.h" />
     <ClInclude Include="Utils\InputMgr.h" />
+    <ClInclude Include="Utils\repidcw.h" />
     <ClInclude Include="Utils\Singleton.h" />
     <ClInclude Include="Utils\TextureHolder.h" />
     <ClInclude Include="Utils\UiMgr.h" />
