--- a/celesteProject/Celeste/sfml-template.vcxproj.filters
+++ b/celesteProject/Celeste/sfml-template.vcxproj.filters
@@ -84,8 +84,14 @@
     <ClCompile Include="Scene\Snow.cpp">
       <Filter>소스 파일\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Scene\Credits.cpp">
+    <ClCompile Include="Scene\ConfirmSelectedMapScene.cpp">
       <Filter>소스 파일\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneMgr\MapSpriteMgr.cpp">
+      <Filter>소스 파일\SceneMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\GameInfoMgr.cpp">
+      <Filter>소스 파일\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -143,8 +149,17 @@
     <ClInclude Include="Scene\Snow.h">
       <Filter>소스 파일\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\Credits.h">
+    <ClInclude Include="Scene\ConfirmSelectedMapScene.h">
       <Filter>소스 파일\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneMgr\MapSpriteMgr.h">
+      <Filter>소스 파일\SceneMgr</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\GameInfoMgr.h">
+      <Filter>소스 파일\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\repidcw.h">
+      <Filter>소스 파일\Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
